--- a/_posts/2021-12-11-tisc-2021.markdown
+++ b/_posts/2021-12-11-tisc-2021.markdown
@@ -1629,7 +1629,7 @@ There are the following things here:
 
 [logs] $ get vast-emptiness-shell
 You pick up 'shell'.
-> ./home/rabbit/flag2.bin
+> /home/rabbit/flag2.bin
 TISC{dr4b_4s_a_f00l_as_al00f_a5_A_b4rd}
 ```
 
